[package]
name = "webapp"
version = "0.1.0"
authors = ["Layl <LaylConway@users.noreply.github.com>"]
description = """
General purpose web utilities, and an abstraction for connecting web
applications and frameworks to server backends.
"""
license = "MIT OR Apache-2.0"

[dependencies]
try_opt = "0.1.1"
hyper = {git = "https://github.com/hyperium/hyper.git"}
